# rust-calc

./: Cargo.toml  LICENSE
.github/workflows/: rust-clippy.yml  rust.yml
rust-calc/: Cargo.toml
rust-calc-lib/: Cargo.toml
rust-calc-lib/src/: lib.rs  numeric.rs
rust-calc-lib/src/evaluator/: error.rs  mod.rs
rust-calc-lib/src/lexer/: fsm.rs  mod.rs  token.rs
rust-calc-lib/src/parser/: mod.rs  tests.rs
rust-calc/src/: main.rs
src/: error.rs  lexer.rs  lib.rs  main.rs  numeric.rs  token.rs
src/evaluator/: error.rs  mod.rs
src/lexer/: error.rs  fsm.rs  mod.rs  tests.rs  token.rs
src/parser/: ast.rs  error.rs  mod.rs  tests.rs
