[package]
name = "rust-calc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.91"
big-rational-str = "0.1.6"
clap = { version = "4.5.20", features = ["derive"] }
num = "0.4.3"
rand = "0.9.0-alpha.2"
